# jpeg_encoder_rust

./: README.md  checksum-Elixir.JpegEncoderRust.exs  mix.exs
.github/workflows/: release.yml
lib/: jpeg_encoder_rust.ex
native/jpeg_encoder_nif/: Cargo.toml
native/jpeg_encoder_nif/src/: lib.rs
test/: qrcode_rust_test.exs
