[package]
name = "jpeg_encoder_nif"
version = "0.4.0"
authors = ["Håvard Lindset"]
edition = "2024"
rust-version = "1.85.1"

[lib]
name = "jpeg_encoder_nif"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = { version = "0.36.1", default-features = false, features = [
    "derive",
] }
jpeg-encoder = "0.6.1"

[features]
default = ["nif_version_2_15"]
nif_version_2_15 = ["rustler/nif_version_2_15"]
nif_version_2_16 = ["rustler/nif_version_2_16"]
nif_version_2_17 = ["rustler/nif_version_2_17"]
